Fixed problems if the submenu can not fit on the screen.

--- a/src/sw-DropDown.css
+++ b/src/sw-DropDown.css
@@ -25,7 +25,8 @@
 
   .sw-dropdown-menu-vertical {
     position: absolute;
-    left: 100%
+    left: 100%;
+    top: var(--sw-menu_top);
   }
   
   .sw-dropdown-menu li, .sw-dropdown-menu li span  {
@@ -60,10 +61,12 @@
   }
   
   .sw-dropdown-menu2 {
-    display: flex;
-    flex-direction: column;
+/*    display: flex;
+    flex-direction: column; */
 
     position: fixed;
+    top: 200px;
+    left: 200px;
     list-style: none; 
     text-align: start;
 
